<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/feedFragment"
        android:enabled="true"
        android:icon="@drawable/ic_recipe_options"
        android:title="@string/all_recipes"/>
    <item
        android:id="@+id/favoriteRecipeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_24"
        android:title="@string/favorites"/>
    <item
        android:id="@+id/regionFilterFragment"
        android:enabled="true"
        android:icon="@drawable/ic_filter_24"
        android:title="@string/filter"/>
    <item
        android:id="@+id/settingsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/settings"/>

</menu>