<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_spacing"
    tools:context=".ui.CreateRecipeFragment">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/recipe_avatar_size"
            android:layout_height="@dimen/recipe_avatar_size"
            android:layout_marginBottom="@dimen/medium_spacing"
            android:clickable="true"
            android:contentDescription="@string/avatar_description"
            android:focusable="true"
            android:src="@drawable/ic_dish"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ic_dish"
            tools:text="Add" />

        <EditText
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:clickable="true"
            android:ellipsize="end"
            android:focusable="true"
            android:fontFamily="casual"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="#F44336"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/recipe_description"
            app:layout_constraintEnd_toStartOf="@id/options"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/recipe_title" />

        <EditText
            android:id="@+id/recipe_description"
            android:layout_width="0dp"
            android:layout_height="@dimen/recipe_description_size"
            android:layout_marginTop="@dimen/common_spacing"
            android:clickable="true"
            android:ellipsize="end"
            android:focusable="true"
            android:singleLine="true"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/title"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/recipe_description" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/options"
            style="@style/Widget.AppTheme.OptionsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_recipe_menu"
            android:paddingStart="@dimen/icon_button_padding_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/favorite"
            style="@style/Widget.AppTheme.Favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:paddingStart="@dimen/icon_button_padding_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/options"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share"
            style="@style/Widget.AppTheme.Share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:paddingStart="@dimen/icon_button_padding_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favorite"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/authorName"
            android:layout_width="@dimen/recipe_avatar_size"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_spacing"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/author_name_hint"
            app:layout_constraintEnd_toEndOf="@+id/avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avatar" />

        <EditText
            android:id="@+id/region"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/region"
            app:layout_constraintBottom_toBottomOf="@id/authorName"
            app:layout_constraintEnd_toEndOf="@+id/recipe_description"
            app:layout_constraintStart_toStartOf="@+id/recipe_description" />

        <TextView
            android:id="@+id/textViewMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/textViewMessage"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/ingredients"
            app:layout_constraintStart_toStartOf="@+id/ingredients"
            app:layout_constraintTop_toBottomOf="@id/ingredients" />

        <EditText
            android:id="@+id/ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:clickable="true"
            android:ellipsize="end"
            android:focusable="true"
            android:fontFamily="casual"
            android:gravity="left"
            android:singleLine="true"
            android:text="@string/ingredients"
            android:textColor="#F44336"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/authorName"
            tools:layout_editor_absoluteX="32dp" />

    <Button
        android:id="@+id/addStepButton"
        style="Widget.AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="4dp"
        android:background="@color/burger"
        android:text="@string/addStepButton"
        app:layout_constraintTop_toBottomOf="@id/textViewMessage"
        tools:text="Add New Step" />

    <ScrollView
        android:id="@+id/scrollContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@id/container"
        app:layout_constraintTop_toBottomOf="@id/addStepButton"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="5dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listViewSteps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/container"
            app:layout_constraintTop_toBottomOf="@+id/addStepButton"
            tools:layout_editor_absoluteX="16dp"
            tools:listitem="@layout/list_steps" />

    </ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/ok_margin" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/recipe_save"
            app:layout_anchor="@id/bottomAppBar"
            app:srcCompat="@drawable/ic_ok_24" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>