<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing">

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/addEditTextButton"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/recipe_description"
        android:layout_width="match_parent"
        android:layout_height="@dimen/recipe_avatar_size"
        android:layout_marginStart="@dimen/medium_spacing"
        android:clickable="true"
        android:ellipsize="end"
        android:isScrollContainer="true"
        android:singleLine="true"
        android:textSize="16sp"
        android:hint="@string/typeTextButton"
        app:layout_constraintEnd_toEndOf="@+id/btnAdd"
        app:layout_constraintStart_toStartOf="@+id/btnAdd"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@string/step_description" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="recipe_description"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="144dp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/small_spacing"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/recipe_description"

        />
</androidx.constraintlayout.widget.ConstraintLayout>