<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/addStepFragment"
    android:padding="@dimen/common_spacing">

    <ImageView
        android:id="@+id/step_picture"
        android:layout_width="@dimen/recipe_avatar_size"
        android:layout_height="@dimen/recipe_avatar_size"
        android:contentDescription="@string/step_picture"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_step"
        app:layout_constraintBottom_toTopOf="@+id/headerBarrier"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@drawable/ic_step"
        tools:text="add picture" />

    <EditText
        android:id="@+id/step_description"
        android:layout_width="@dimen/step_width_size"
        android:layout_height="@dimen/recipe_avatar_size"
        android:layout_marginStart="@dimen/medium_spacing"
        android:ellipsize="end"
        android:isScrollContainer="true"
        android:singleLine="false"
        android:textSize="16sp"
        android:hint="@string/addStepDescription"
        app:layout_constraintStart_toEndOf="@+id/step_picture"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@string/step_description" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="step_picture, step_description"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="144dp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/small_spacing"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/step_description"
        />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step_description"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/ok_margin" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/recipe_save"
            app:layout_anchor="@id/bottomAppBar"
            app:srcCompat="@drawable/ic_ok_24" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>